<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/user_picture"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription"
        tools:src="@drawable/ic_user" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:textSize="@dimen/username_text_size_30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/mobile_number_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/v_guideline"
        app:layout_constraintTop_toBottomOf="@+id/h_guideline"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/user_name_template" />

    <LinearLayout
        android:id="@+id/mobile_number_layout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/state_name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/v_guideline"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/user_item_padding_8dp"
            android:text="@string/mobile_number"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/mobile_number_template" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/city_name_layout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/state_name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/v_guideline"
        app:layout_constraintTop_toBottomOf="@+id/mobile_number_layout"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/user_item_padding_8dp"
            android:text="@string/city_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/city_name_template" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/state_name_layout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/country_name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/v_guideline"
        app:layout_constraintTop_toBottomOf="@+id/city_name_layout"
        app:layout_constraintVertical_bias="0.01999998"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/user_item_padding_8dp"
            android:text="@string/state_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/state_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/city_name_template" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/country_name_layout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/age_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/v_guideline"
        app:layout_constraintTop_toBottomOf="@+id/state_name_layout"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/user_item_padding_8dp"
            android:text="@string/country_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/country_name_template" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/age_layout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gender_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/v_guideline"
        app:layout_constraintTop_toBottomOf="@+id/country_name_layout"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/user_item_padding_8dp"
            android:text="@string/user_age"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/user_age_template" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gender_layout"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/v_guideline"
        app:layout_constraintTop_toBottomOf="@+id/age_layout"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/user_item_padding_8dp"
            android:text="@string/gender"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/user_gender_template" />
    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

</androidx.constraintlayout.widget.ConstraintLayout>