<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/user_picture"
        android:layout_width="@dimen/thumbnail_size_100dp"
        android:layout_height="@dimen/thumbnail_size_100dp"
        android:contentDescription="@string/user_picture"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_user" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thumbnail_margin_6dp"
        android:contentDescription="@string/user_name_template"
        android:layout_marginStart="@dimen/user_item_text_padding_start"
        android:textSize="@dimen/user_name_font_size_16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/user_name_template" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/user_item_text_padding_start"
        android:textSize="@dimen/gender_text_size_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/gender_template" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>